== master

== 0.2.1 / 2008-07-05

* Add more descriptive exceptions
* Assume the default state attribute is "state" if one is not provided
* Add :except_from option for transitions if you want to blacklist states
* Add PluginAWeek::StateMachine::Machine#states
* Add PluginAWeek::StateMachine::Event#transitions
* Allow creating transitions with no from state (effectively allowing the transition for *any* from state)
* Reduce the number of objects created for each transition

== 0.2.0 / 2008-06-29

* Add a non-bang version of events (e.g. park) that will return a boolean value for success
* Raise an exception if the bang version of events are used (e.g. park!) and no transition is successful
* Change callbacks to act a little more like ActiveRecord
* Avoid using string evaluation for dynamic methods

== 0.1.1 / 2008-06-22

* Remove log files from gems

== 0.1.0 / 2008-05-05

* Completely rewritten from scratch
* Renamed to state_machine
* Removed database dependencies
* Removed models in favor of an attribute-agnostic design
* Use ActiveSupport::Callbacks instead of eval_call
* Remove dry_transaction_rollbacks dependencies
* Added functional tests
* Updated documentation

== 0.0.1 / 2007-09-26

* Add dependency on custom_callbacks
* Move test fixtures out of the test application root directory
* Improve documentation
* Remove the StateExtension module in favor of adding singleton methods to the stateful class
* Convert dos newlines to unix newlines
* Fix error message when a given event can't be found in the database
* Add before_#{action} and #{action} callbacks when an event is performed
* All state and event callbacks can now explicitly return false in order to cancel the action
* Refactor ActiveState callback creation
* Refactor unit tests so that they use mock classes instead of themselves
* Allow force_reload option to be set in the state association
* Don't save the entire model when updating the state_id